fix: recording/chunks overlap

--- a/query.css
+++ b/query.css
@@ -8,6 +8,9 @@
         font-size:9pt;
     }
 
+    .si-list-item {
+        width:100% !important;
+    }
     #input-container{
         gap:4px;
     }
