--- a/styles.css
+++ b/styles.css
@@ -334,6 +334,18 @@ nav#nav{
 
 /* general */
 /* ______________________________ */
+.border-bottom-auth {
+    border-bottom:var(--notice-color) !important;
+}
+.no-highlight {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari, Chrome, Opera */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Standard property */
+}
+
 .stale-body{
     filter:blur(1.25px) !important;
 }
@@ -486,7 +498,7 @@ nav#nav{
 
     color: var(--alert-color);
 
-    z-index: 999;
+    z-index: 990;
 }
 .si-list-item:hover {
     cursor: pointer;
@@ -635,6 +647,12 @@ nav#nav{
 
 /* datetime */
 
+/* input */
+input, select {
+    height:35px;
+    outline: none !important;
+}
+
 #input-container{
     overflow: hidden;
     
@@ -661,7 +679,16 @@ nav#nav{
     border-radius: 6px;
     font-size:12pt; 
 
-    color:var(--secondary-color)
+    color:var(--secondary-color);
+
+    height: 35px;
+
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    font-size:11pt;
 }
 
 #datetime-submit:hover {
